--- a/src/main/resources/webapp/partials/settings.html
+++ b/src/main/resources/webapp/partials/settings.html
@@ -1,1 +1,27 @@
-<h2>{{message}}</h2>
+<div class="row">
+
+    <div class="form-inline toolbox">
+
+        <div class="form-inline form-group">
+            <label>{{msg('odk.selectConfig')}}: </label>
+            <select class="largeCombobox form-control " ng-change="updateSelectedConfig($parent.selectedConfig, oldValue)" ng-click="oldValue = $parent.selectedConfig" ng-model="$parent.selectedConfig" ng-options="config.name for config in configs">
+            </select>
+        </div>
+        <div class="btn-group form-group">
+            <a ng-click="addConfig()" type="button" class="form-group btn btn-success">
+                <i class="fa fa-plus"></i> {{msg('odk.addConfig')}}
+            </a>
+            <a ng-if="selectedConfig" ng-disabled="!saveAllowed()" ng-click="saveConfig()" type="button" class="btn btn-primary">
+                <i class="fa fw fa-save"></i> {{msg('odk.save')}}
+            </a>
+            <a ng-if="selectedConfig" ng-click="deleteConfig()" type="button" class="btn btn-danger input-small">
+                <i class="fa fa-fw fa-trash-o"></i> {{msg('odk.delete')}}
+            </a>
+            <a ng-if="selectedConfig" ng-disabled="!validateConfig()" ng-click="verify()" type="button" class="btn btn-info">
+                <i class="fa fw fa-check-circle-o"></i> {{msg('odk.verify')}}
+            </a>
+        </div>
+    </div>
+
+
+</div>
