--- a/src/main/resources/webapp/partials/settings.html
+++ b/src/main/resources/webapp/partials/settings.html
@@ -4,24 +4,87 @@
 
         <div class="form-inline form-group">
             <label>{{msg('odk.selectConfig')}}: </label>
-            <select class="largeCombobox form-control " ng-change="updateSelectedConfig($parent.selectedConfig, oldValue)" ng-click="oldValue = $parent.selectedConfig" ng-model="$parent.selectedConfig" ng-options="config.name for config in configs">
+            <select class="largeCombobox form-control" ng-model="selectedConfig" ng-options="config.name for config in configs">
             </select>
         </div>
         <div class="btn-group form-group">
             <a ng-click="addConfig()" type="button" class="form-group btn btn-success">
                 <i class="fa fa-plus"></i> {{msg('odk.addConfig')}}
             </a>
-            <a ng-if="selectedConfig" ng-disabled="!saveAllowed()" ng-click="saveConfig()" type="button" class="btn btn-primary">
+            <a ng-if="selectedConfig" ng-click="saveConfig()" type="button" class="btn btn-primary">
                 <i class="fa fw fa-save"></i> {{msg('odk.save')}}
             </a>
             <a ng-if="selectedConfig" ng-click="deleteConfig()" type="button" class="btn btn-danger input-small">
                 <i class="fa fa-fw fa-trash-o"></i> {{msg('odk.delete')}}
             </a>
-            <a ng-if="selectedConfig" ng-disabled="!validateConfig()" ng-click="verify()" type="button" class="btn btn-info">
+            <a ng-if="selectedConfig"  ng-click="verify()" type="button" class="btn btn-info">
                 <i class="fa fw fa-check-circle-o"></i> {{msg('odk.verify')}}
             </a>
         </div>
     </div>
 
+    <form ng-if="selectedConfig" >
 
+        <div class="row inside form-group">
+            <h4 class="inside form-group">{{msg('odk.settings.section.accountSettings')}}</h4>
+
+            <div class="form-group">
+                <label class="col-md-3 col-sm-4 control-label" for="type">{{msg('odk.settings.label.configType')}}</label>
+                <div class="col-md-9 col-sm-8 form-inline">
+                    <select class=" form-control input-small"  ng-model="selectedConfig.type" id="type">
+                        <option ng-repeat="configType in configTypes" value="{{configType.type}}">{{configType.name}}</option>
+                    </select>
+                    <div class="form-hints">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 col-sm-4 control-label" for="name">{{msg('odk.settings.label.configName')}}</label>
+                <div class="col-md-9 col-sm-8 form-inline">
+                    <input class="form-control input-xlarge-fluid" ng-model="selectedConfig.name" type="text" id="name" placeholder="{{msg('odk.settings.label.configName')}}" />
+                    <div class="form-hints">
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label class="col-md-3 col-sm-4 control-label" for="url">{{msg('odk.settings.label.baseUrl')}}</label>
+                <div class="col-md-9 col-sm-8 form-inline">
+                    <input class="form-control input-xlarge-fluid" ng-model="selectedConfig.url" type="text" id="url" placeholder="{{msg('odk.settings.label.baseUrl')}}" />
+                    <div class="form-hints">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 col-sm-4 control-label" for="namespace">{{msg('odk.settings.label.namespace')}}</label>
+                <div class="col-md-9 col-sm-8 form-inline">
+                    <input class="form-control input-group input-xlarge-fluid" ng-model="selectedConfig.namespace" type="text" id="namespace" placeholder="{{msg('odk.settings.label.namespace')}}" required/>
+                    <div class="form-hints">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 col-sm-4 control-label" for="username">{{msg('odk.settings.label.username')}}</label>
+                <div class="col-md-9 col-sm-8 form-inline">
+                    <input class="form-control input-xlarge-fluid" ng-change="draftChanged()" ng-model="selectedConfig.username" type="text" id="username" placeholder="{{msg('odk.settings.label.username')}}" required/>
+                    <div class="form-hints">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-3 col-sm-4 control-label" for="password">{{msg('odk.settings.label.password')}}</label>
+
+                <div class="col-md-9 col-sm-8 form-inline">
+                    <input class="form-control input-xlarge-fluid" ng-model="selectedConfig.password" type="password" id="password" placeholder="{{msg('odk.settings.label.password')}}" required/>
+                    <div class="form-hints">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
