--- a/src/main/resources/webapp/partials/settings.html
+++ b/src/main/resources/webapp/partials/settings.html
@@ -31,8 +31,8 @@
             <div class="form-group">
                 <label class="col-md-3 col-sm-4 control-label" for="type">{{msg('odk.settings.label.configType')}}</label>
                 <div class="col-md-9 col-sm-8 form-inline">
-                    <select class=" form-control input-small"  ng-model="selectedConfig.type" id="type">
-                        <option ng-repeat="configType in configTypes" value="{{configType.type}}">{{configType.name}}</option>
+                    <select class="form-control input-small"  ng-model="selectedConfig.type" ng-options="configType.type as configType.name for configType in configTypes" id="type">
+                     <!--   <option ng-selected="selectedConfig.type == configType.type" ng-repeat="configType in configTypes" value="{{configType.type}}">{{configType.name}}</option> -->
                     </select>
                     <div class="form-hints">
                     </div>
