fixed span tag in settings.html

--- a/src/main/resources/webapp/partials/settings.html
+++ b/src/main/resources/webapp/partials/settings.html
@@ -43,7 +43,7 @@
                 <div class="col-md-9 col-sm-8 form-inline">
                     <input required ng-change="unverify()"  class="form-control input-xlarge-fluid" ng-model="selectedConfig.name" type="text" id="name" placeholder="{{msg('odk.settings.label.configName')}}" />
                     <div class="form-hints">
-                        <span ng-hide="selectedConfig.name" class="form-hint-error">{{msg('odk.settings.label.hint.name')}}/span>
+                        <span ng-hide="selectedConfig.name" class="form-hint-error">{{msg('odk.settings.label.hint.name')}}</span>
                     </div>
                 </div>
             </div>
