fixed another span tag

--- a/src/main/resources/webapp/partials/settings.html
+++ b/src/main/resources/webapp/partials/settings.html
@@ -76,7 +76,7 @@
                 <div class="col-md-9 col-sm-8 form-inline">
                     <input required ng-change="unverify()" class="form-control input-xlarge-fluid" ng-model="selectedConfig.password" type="password" id="password" placeholder="{{msg('odk.settings.label.password')}}" />
                     <div class="form-hints">
-                        <span ng-hide="selectedConfig.password" class="form-hint-error">{{msg('odk.settings.label.hint.password')}}/span>
+                        <span ng-hide="selectedConfig.password" class="form-hint-error">{{msg('odk.settings.label.hint.password')}}</span>
 
                     </div>
                 </div>
